crates/toml/tests/snapshots/invalid/integer/leading-us-hex.stderr
TOML parse error at line 1, column 18
  |
1 | leading-us-hex = _0x1
  |                  ^
`_` may only go between digits, expected nothing
